kubernetes/base/elodin-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elodin
  annotations:
    'kubernetes.io/ingress.class': traefik
spec:
  defaultBackend:
    service:
      name: elo-dashboard
      port:
        number: 80
  rules:
  - host: elodin.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: elo-dashboard
            port: 
              number: 80
      - path: /paracosm.types.api.Api
        pathType: Prefix
        backend:
          service:
            name: elo-atc
            port:
              number: 50051
      - path: /sim/ws
        pathType: Prefix
        backend:
          service:
            name: elo-atc
            port:
              number: 50051
